--- a/demo/compose.yaml
+++ b/demo/compose.yaml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
 
   cloudflared:
     image: cloudflare/cloudflared:latest
@@ -13,5 +15,3 @@ services:
     depends_on:
       - app
     command: tunnel --no-autoupdate run
-    environment:
-      - TUNNEL_TOKEN=${CF_TUNNEL_TOKEN}
