--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 	testImplementation 'org.springframework.boot:spring-boot-starter-webservices-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testRuntimeOnly "com.h2database:h2"
 }
 
 tasks.named('test') {
